# FunnyWithC-

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Uri1007/: CMakeLists.txt  Difference.cpp  Difference.h  main.cpp
tests/: CMakeLists.txt  test_checkDifference.cpp
